WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24945
Fix Chromium build
https://bugs.webkit.org/show_bug.cgi?id=24945
Summary
Fix Chromium build
Jeremy Moskovich
Reported
2009-03-30 14:42:29 PDT
Bug to track a couple of small changes needed to fix the Chromium build.
Attachments
patch
(2.10 KB, patch)
2009-03-30 14:46 PDT
,
Jeremy Moskovich
dglazkov
: review+
Details
Formatted Diff
Diff
patch2
(2.10 KB, patch)
2009-03-30 16:21 PDT
,
Jeremy Moskovich
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Moskovich
Comment 1
2009-03-30 14:46:44 PDT
Created
attachment 29087
[details]
patch Add back some missing headers in document.h and updated clipboardChromium.h with NamedAttrMap->NamedNodeMap merge.
Darin Adler
Comment 2
2009-03-30 16:16:33 PDT
Comment on
attachment 29087
[details]
patch
> +#include "NamedAttrMap.h"
Should be #include "NamedNodeMap.h".
Jeremy Moskovich
Comment 3
2009-03-30 16:21:45 PDT
Created
attachment 29095
[details]
patch2 NamedAttrMap.h -> NamedNodeMap.h , thanks Darin!!
Darin Fisher (:fishd, Google)
Comment 4
2009-03-31 09:13:56 PDT
Landed as:
http://trac.webkit.org/changeset/42129
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug