2009-03-31  Jeremy Moskovich  <jeremy@chromium.org>

Reviewed by Darin Adler.

        Build fixes for Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=24945

        * dom/Document.h:
        * platform/chromium/ClipboardChromium.cpp:
        (WebCore::imageToMarkup):



Canonical link: https://commits.webkit.org/34184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42129 268f45cc-cd09-0410-ab3c-d52691b4dbfc