WebCore/platform/chromium/ClipboardChromium.cpp
@@ -37,6 +37,7 @@
 #include "HTMLNames.h"
 #include "MIMETypeRegistry.h"
 #include "markup.h"
+#include "NamedNodeMap.h"
 #include "PlatformString.h"
 #include "Range.h"
 #include "RenderImage.h"
@@ -216,7 +217,7 @@ static String imageToMarkup(const String& url, Element* element)
     markup.append("\"");
     // Copy over attributes.  If we are dragging an image, we expect things like
     // the id to be copied as well.
-    NamedAttrMap* attrs = element->attributes();
+    NamedNodeMap* attrs = element->attributes();
     unsigned length = attrs->length();
     for (unsigned i = 0; i < length; ++i) {
         Attribute* attr = attrs->attributeItem(i);
